infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-pod
  template:
    metadata:
      labels:
        app: auth-pod
    spec:
      containers:
        - name: auth-container
          image: us.gcr.io/directed-relic-285313/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-pod
  ports:
    - name: auth-port
      protocol: TCP
      port: 3000
      targetPort: 3000
