infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo-pod
  template:
    metadata:
      labels:
        app: auth-mongo-pod
    spec:
      containers:
        - name: auth-mongo-container
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  selector:
    app: auth-mongo-pod
  ports:
    - name: db
      protocol: TCP
      port: 27017 # mongo listens for traffic at this port
      targetPort: 27017
