infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-pod
  template:
    metadata:
      labels:
        app: nats-pod
    spec:
      containers:
        - name: nats-container
          image: nats-streaming:0.17.0
          args: # array of args to provide to primary command that gets executed when a container is built out of our image
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "ticketing",
            ]

---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: nats-pod
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
