infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-pod
  template:
    metadata:
      labels:
        app: tickets-pod
    spec:
      containers:
        - name: tickets-container
          image: us.gcr.io/directed-relic-285313/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
spec:
  type: ClusterIP
  selector:
    app: tickets-pod
  ports:
    - name: tickets-port
      protocol: TCP
      port: 3000
      targetPort: 3000
