infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo-pod
  template:
    metadata:
      labels:
        app: tickets-mongo-pod
    spec:
      containers:
        - name: tickets-mongo-container
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-service
spec:
  selector:
    app: tickets-mongo-pod
  ports:
    - name: db
      protocol: TCP
      port: 27017 # mongo listens for traffic at this port
      targetPort: 27017
